# Ambulance-Dispatch-Optimizer

./: .gitignore  Dockerfile  README.md  environment.py  gen_map.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_api.py
data/: city_map.json
graders/: easy_grader.py  hard_grader.py  medium_grader.py
server/: app.py
tasks/: easy.py  hard.py  medium.py
